# ev-charge-control

./: .env.example  .gitignore  CONTEXT.md  LICENSE  README.md  VERSIONING.md  config.yaml  pyproject.toml  repository.yaml  requirements.txt  run.sh  sample-options.json
.codex/skills/deploy/: SKILL.md
.codex/skills/deploy/agents/: openai.yaml
doc/: fix-xxx.md  fr-xxx.md
doc/features/: fr-001.md  fr-002.md  fr-003.md  fr-004.md  fr-005.md  fr-006.md  fr-007.md  fr-008.md  fr-009.md  fr-010.md
doc/fixes/: fix-001.md  fix-002.md  fix-003.md  fix-004.md  fix-005.md  fix-006.md  fix-007.md  fix-008.md  fix-009.md  fix-010.md  fix-011.md  fix-012.md  fix-013.md  fix-014.md  fix-015.md  fix-016.md  fix-017.md  fix-018.md  fix-019.md  fix-020.md  fix-021.md  fix-022.md  fix-023.md
doc/misc/: state-machine.md
ev_charge_control/: CHANGELOG.md  Dockerfile  build.yaml  config.yaml
ev_charge_control/src/evcc/: __init__.py  __main__.py  app.py  ha_api.py  mqtt_output.py  runtime.py  state_machine.py
ev_charge_control/translations/: en.yaml
src/evcc/: __init__.py  ha_api.py  runtime.py
tests/: test_app.py  test_ha_api.py  test_mqtt_output.py  test_runtime.py  test_state_machine.py
