[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ev-charge-control"
version = "2.1.1"
description = "Home Assistant EV charge control app."
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }
authors = [
  { name = "Alex Rasmussen" }
]
dependencies = [
  "paho-mqtt>=2.1,<3.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0"
]

[tool.setuptools]
package-dir = { "" = "ev_charge_control/src" }

[tool.setuptools.packages.find]
where = ["ev_charge_control/src"]
